--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Yelp Clone</h4></center>
-          <div class="portfolio-wrap">
+          <div>
             <img src="assets/img/project/yelp.png" class="img-fluid" alt="">
             <p></p>
             <p>• Developed a Full stack web application using React.js for the front end and Express.js for the back end.</p>
@@ -327,9 +327,10 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Back-Testing Trading Tool</h4></center>
-          <div class="portfolio-wrap">
+          <div>
             <p></p>
             <img src="assets/img/project/stocks.png" class="img-fluid" alt="">
+            <p></p>
             <p>• Backtested specific trading strategies that revolved around EMA crosses. Studied how price is correlated with various moving averages using historical data. The goal was to find a mathematical edge.</p>
             <p>• Tracked every single time the pattern triggered starting from 1/1/2012. Calculated batting average, gain/loss ratio, average gain, average loss, max return, max loss, and net return.</p>
             <p>• Built a stock scanner tool to search the market for stocks meeting user-defined criteria. Some scans include up on volume, closed daily near highs, inside bar, etc. Implemented using thinkorswim.</p>
@@ -338,8 +339,8 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Discord Clone</h4></center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/discord.png">
+          <div>
+            <img src="assets/img/project/discord.png" class="img-fluid" alt="">
             <p></p>
             <p>• Built a Discord like application where users can talk anonymously using only a username.</p>
             <p>• Enabled real-time messaging via socket.io. Implemented app using React, MySQL, Node.js, and Express.js.</p>
@@ -494,7 +495,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Developer", "an Engineer"],
+      strings: ["a Developer", "an Engineer", "in love with Shreya <3"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
