--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
 
       <div class="social-links">
           <a href="https://www.linkedin.com/in/harshi-doddapaneni" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/HarshiDodda" target="_blank" class="github"><i class="bx bxl-github"></i></a>
           <a href="mailto:harshidoddapaneni@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
@@ -115,7 +114,7 @@
             I graduated from UC Riverside with a B.S. in Computer Science in March 2023. Since then, I have been working as a Software Engineer at Vanguard. 
           </p>
           <p>
-            I also really love my girlfriend, Shreya Chitturi, so very much and she is my everything.
+            I have a strong passion for learning and continuously seek opportunities to expand my skills, always striving for improvement. I thrive on solving complex problems and enjoy the creative aspects of being a developer/engineer. I excel in team collaboration and effective communication. With a growth mindset, I'm dedicated to acquiring new knowledge, mastering emerging technologies, and honing my skills.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -153,8 +152,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #e80368;"></i>
-            <h3>Computer Vision</h3>
+            <i class="ri-pie-chart-2-line" style="color: #e80368;"></i>
+            <h3>Data Science</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -183,8 +182,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Image Processing</h3>
+            <i class="ri-robot-line" style="color: #ffc107;"></i>
+            <h3>Artificial Intelligence</h3>
           </div>
         </div>
       </div>
@@ -207,7 +206,7 @@
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
             <img src="assets/img/education/school.png" class="img-fluid" alt="">
             <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>BS in Computer Science</em></p>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. in Computer Science</em></p>
             <h5 style="text-align:left;padding: 0px 10px;">September 2019 - March 2023</h5>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cumulative GPA: 3.97</h6>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Major GPA: 4.00</h6>
@@ -234,12 +233,12 @@
       <div class="row portfolio-container" style="position: relative; height: 437.75px;">
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
-          <div class="portfolio-wrap">
+          <div>
             <img src="assets/img/certification/cert.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>AWS Developer Associate</h4>
             </div>
-            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Oct 2023 - Oct 2026</em></p>
+            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em></em></p>
            </div>
           </div>
 
@@ -448,13 +447,12 @@
 
      
 
-        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.linkedin.com/in/harshi-doddapaneni" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://github.com/HarshiDodda" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="mailto:harshidoddapaneni@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
@@ -473,6 +471,10 @@
             <i class="bx bx-phone-call"></i>
             <h3>Contact</h3>
             <p>+1 925-967-6026</p>
+            <p>
+
+              
+            </p>
           </div>
         </div>
       </div>
@@ -495,7 +497,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["a Developer", "an Engineer", "in love with Shreya <3"],
+      strings: ["a Developer", "a Problem Solver", "an Engineer", "a Critical Thinker"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
