--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1FYBOYeubsqzsr7trJMRVgS3YKiod7BZh/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -265,12 +265,14 @@
                 <h5 style="text-align:left;">April 2023 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
                 <ul style="text-align:left;">
-                  <li>Developed new features, enhanced UI/UX, and resolved bugs, improving project performance and usability.</li>
-                  <li>Developed a script to track usage data of IAM roles to create projections of when our hard limits would be hit.</li>
-                  <li>Created lambda functions in python using the boto3 library to help with moving events for our account migration.</li>
-                  <li>Implemented custom Grafana dashboards using Python and Angular which displayed trends in our usage of AWS resources.</li>
-                  <li>Worked with EC2, Lambda, S3, IAM, CloudWatch, DynamoDB, and EventBridge.</li>
-                  <li>Created and maintained documentation of the project, facilitating better understanding and efficiency.</li>
+                  <li>Developed a predictive system to manage IAM role hard limit usage, utilizing Lambda functions, which saved the
+                    team 2 hours a week by proactively managing resource limitations.</li>
+                  <li>Improved project performance and usability by developing new features, enhancing UI, and resolving bugs,
+                    resulting in a 50% increase in user satisfaction.</li>
+                  <li>Automated AWS account migration with Lambda functions, reducing migration time and errors by 35%.</li>
+                  <li>- Visualized AWS resource usage trends using custom Grafana dashboards, reducing resource costs by 15% and improving allocation.</li>
+                  <li>- Developed an automated ACM certificate expiration notification system, reducing certificate-related incidents by 25% and ensuring 100% certificate uptime.</li>
+                  <li></li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -419,8 +421,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1FYBOYeubsqzsr7trJMRVgS3YKiod7BZh/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1FYBOYeubsqzsr7trJMRVgS3YKiod7BZh/view?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
     
