--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
                   <li>Improved project performance and usability by developing new features, enhancing UI, and resolving bugs,
                     resulting in a 50% increase in user satisfaction.</li>
                   <li>Automated AWS account migration with Lambda functions, reducing migration time and errors by 35%.</li>
-                  <li>- Visualized AWS resource usage trends using custom Grafana dashboards, reducing resource costs by 15% and improving allocation.</li>
-                  <li>- Developed an automated ACM certificate expiration notification system, reducing certificate-related incidents by 25% and ensuring 100% certificate uptime.</li>
-                  <li></li>
+                  <li>Visualized AWS resource usage trends using custom Grafana dashboards, reducing resource costs by 15% and improving allocation.</li>
+                  <li>Developed an automated ACM certificate expiration notification system, reducing certificate-related incidents by 25% and ensuring 100% certificate uptime.</li>
+             
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
