--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
             <img src="assets/img/education/school.png" class="img-fluid" alt="">
             <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
             <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.S. in Computer Science</em></p>
-            <h5 style="text-align:left;padding: 0px 10px;">September 2019 - March 2023</h5>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Cumulative GPA: 3.97</h6>
-            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Major GPA: 4.00</h6>
+            <h5 style="text-align:left;padding: 0px 8px;">September 2019 - March 2023</h5>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">- Cumulative GPA: 3.97</h6>
+            <h6 style="text-align:left;color:#fff;padding: 0px 10px;">- Major GPA: 4.00</h6>
             <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
             <ul style="text-align:left;color:#fff;">
               <li>Artificial Intelligence</li>
