--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Yelp Clone</h4></center>
+          <center><h4>FlavorQuest</h4></center>
           <div>
             <img src="assets/img/project/yelp.png" class="img-fluid" alt="">
             <p></p>
