--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/15oBQ92DuCdHFmmJPV_krKmBJtA_UC0_Y/view?usp=sharing target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -235,6 +235,10 @@
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div>
             <img src="assets/img/certification/cert.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>AWS Developer Associate</h4>
+            </div>
+            <img src="assets/img/certification/saa.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>AWS Developer Associate</h4>
             </div>
@@ -421,8 +425,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1c1OvqqkAxxJqj7pPeSSXTXlvqe7N61kN/view?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/15oBQ92DuCdHFmmJPV_krKmBJtA_UC0_Y/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/15oBQ92DuCdHFmmJPV_krKmBJtA_UC0_Y/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
     
