--- a/index.html
+++ b/index.html
@@ -232,19 +232,22 @@
 
       <div class="row portfolio-container" style="position: relative; height: 437.75px;">
 
-         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
-          <div>
-            <img src="assets/img/certification/cert.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
+          <div style="margin-bottom: 20px;">
+            <img src="assets/img/certification/cert.png" class="img-fluid" alt="AWS Developer Associate" style="width: 100%; height: auto; max-width: 200px; max-height: 200px;">
+            <div class="portfolio-info" style="text-align: center;">
               <h4>AWS Developer Associate</h4>
             </div>
-            <img src="assets/img/certification/saa.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
+          </div>
+          <div style="margin-bottom: 20px;">
+            <img src="assets/img/certification/saa.png" class="img-fluid" alt="AWS Solutions Architect Associate" style="width: 100%; height: auto; max-width: 200px; max-height: 200px;">
+            <div class="portfolio-info" style="text-align: center;">
               <h4>AWS Solutions Architect Associate</h4>
             </div>
-            <p style="text-align:left;color:#fff;padding: 5px 10px;"><em></em></p>
-           </div>
           </div>
+        </div>
+        
+        
 
       </div>
     </div>
