--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div style="margin-bottom: 20px;">
-            <img src="assets/img/certification/cert.png" class="img-fluid" alt="AWS Developer Associate" style="width: 200px; height: 200px;">
+            <img src="assets/img/certification/cert.png" class="img-fluid" alt="AWS Developer Associate" >
             <div class="portfolio-info" style="text-align: center;">
               <h4>AWS Developer Associate</h4>
             </div>
           </div>
           <div style="margin-bottom: 20px;">
-            <img src="assets/img/certification/saa.png" class="img-fluid" alt="AWS Solutions Architect Associate" style="width: 200px; height: 200px;">
+            <img src="assets/img/certification/saa.png" class="img-fluid" alt="AWS Solutions Architect Associate" >
             <div class="portfolio-info" style="text-align: center;">
               <h4>AWS Solutions Architect Associate</h4>
             </div>
