--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             I believe that doing what you love and following your true passions leads to success and happiness.
           </p>
           <p>
-            I graduated from UC Riverside with a B.S. in Computer Science in March 2023. Since then, I have been working as a Software Engineer at Vanguard. 
+            I graduated from UC Riverside with a B.S. in Computer Science in March 2023. Since then, I have worked at Vanguard and am now a Software Engineer at Oracle.
           </p>
           <p>
             I have a strong passion for learning and continuously seek opportunities to expand my skills, always striving for improvement. I thrive on solving complex problems and enjoy the creative aspects of being a developer/engineer. I excel in team collaboration and effective communication. With a growth mindset, I'm dedicated to acquiring new knowledge, mastering emerging technologies, and honing my skills.
@@ -260,8 +260,14 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Oracle</a><br> </h4>
+                <h5 style="text-align:left;">August 2024 - Present 2024</h5>
+                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <ul style="text-align:left;">
+                  <li>Coming soon!</li>
+                </ul>
                 <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Vanguard</a><br> </h4>
-                <h5 style="text-align:left;">April 2023 - Present</h5>
+                <h5 style="text-align:left;">April 2023 - August 2024</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
                 <ul style="text-align:left;">
                   <li>Played a key role in the development of the Multi-Region Deployment Strategy, which over 30 teams now utilize to enhance their system reliability and disaster recovery capabilities.</li>
