--- a/index.html
+++ b/index.html
@@ -259,13 +259,16 @@
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Oracle</a><br> </h4>
-                <h5 style="text-align:left;">August 2024 - Present 2024</h5>
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Oracle</a><br> </h4>
+              <h5 style="text-align:left;">August 2024 - Present 2024</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
-                <ul style="text-align:left;">
-                  <li>Coming soon!</li>
-                </ul>
+              <ul style="text-align:left;">
+                <li>Coming soon!</li>
+              </ul>
+            </div>
+
+              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Vanguard</a><br> </h4>
                 <h5 style="text-align:left;">April 2023 - August 2024</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
