--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <div class="col-lg-12" data-aos="fade-up">
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
               <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Oracle</a><br> </h4>
-              <h5 style="text-align:left;">August 2024 - Present 2024</h5>
+              <h5 style="text-align:left;">August 2024 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
               <ul style="text-align:left;">
                 <li>Coming soon!</li>
